# esp-audio-video

./: .gitignore  API.md  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  LICENSE  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SPEECH_RECOGNITION.md  TROUBLESHOOTING.md  sdkconfig.bsp.esp-box-3  sdkconfig.defaults.esp32s3
main/: CMakeLists.txt  app_disp_fs.c  app_disp_fs.h  idf_component.yml  main.c  micro_features_generator.cc  micro_model_settings.h  model.cc  model.h  speech_recognition.cpp  speech_recognition.h
